--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "3.8.1",
     "popper.js": "^1.16.1",
     "vue": "^2.6.14",
+    "vue-clipboard2": "^0.3.3",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
